fix(cache-key): 5-agent implementation-review fold — plan §11
The panel (1 Fable + 4 Opus, all SHIP-WITH-FIXES) converged on three MAJORs,
all fixed: late cross-dimension unstamps now target the DEPARTED dimension's
own bucket (dimensionBuckets — the re-keyed world axis had reopened the #36
false-stamp hole on per-world-seed servers); the bucket deleter is genuinely
NON-FOLLOWING (symlinks deleted as links, one shared body behind all three
clears); and the two-axis wiring gained its §4.4 source-pin
(TwoAxisWiringContractTest — the one wire whose loss was invisible to every
behavioural test).

ForceGrant hardening: the granted root travels into the ladder (force applies
only to a samePath-equal live root; the no-instance fallback wipe is refused
under force), the gate clears the grant at JOIN as well as disconnect, the
declined-wipe report carries liveRootContained so voxy-force is only offered
where stage 1 could arm it, and voxyPresent now means the mod is installed.
Adoption gained the same-session bare-residue guard (a seedless lobby leg
never seeds the next world's bucket) and case-insensitive sibling matching;
alias validation stages its claims (no cascade), dedupes intra-group case
variants, and no longer rewrites the user's config field (the load-time
re-save would have erased dropped groups). Both unknown-address flavors are
world-axis-eligible. Test additions across eight suites (FIFO carry, symlink,
prefix boundary, cap WARN, vanished instance, force×SHUTDOWN_FAILED, rebuild
carry, post-adoption switch-off); README NeoForge honesty note; plan §11
records the fold and the accepted-open residuals.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>